RESOLVED FIXED190694
AI does not clear Phantom allocation nodes.
https://bugs.webkit.org/show_bug.cgi?id=190694
Summary AI does not clear Phantom allocation nodes.
Keith Miller
Reported 2018-10-17 17:38:09 PDT
AI does not clear Phantom allocation nodes.
Attachments
Patch (5.24 KB, patch)
2018-10-17 17:40 PDT, Keith Miller
saam: review+
Keith Miller
Comment 1 2018-10-17 17:40:01 PDT
Saam Barati
Comment 2 2018-10-17 17:41:51 PDT
Comment on attachment 352667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=352667&action=review r=me > Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:2578 > // This claims to return bottom. nit: IMO We don't really need this comment anymore since it just says exactly what the code is doing.
Keith Miller
Comment 3 2018-10-17 17:44:30 PDT
Comment on attachment 352667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=352667&action=review >> Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:2578 >> // This claims to return bottom. > > nit: IMO We don't really need this comment anymore since it just says exactly what the code is doing. Fair enough, I'll remove.
Keith Miller
Comment 4 2018-10-17 20:18:15 PDT
Keith Miller
Comment 5 2018-10-17 20:18:51 PDT
Radar WebKit Bug Importer
Comment 6 2018-10-17 20:19:22 PDT
Mark Lam
Comment 7 2018-10-17 21:28:40 PDT
Note You need to log in before you can comment on or make changes to this bug.